--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,12 +3,37 @@
 
 @custom-variant dark (&:is(.dark *));
 
+@keyframes appear {
+  from {
+    opacity: 0;
+    transform: translateY(20px);
+
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+@keyframes slide {
+  from {
+    transform: translateX(-5%);
+  }
+  to {
+    transform: translateX(0);
+  }
+}
+
+
+
 @theme inline {
   --color-background: var(--background);
   --color-foreground: var(--foreground);
   --font-sans: var(--font-geist-sans);
   --font-mono: var(--font-geist-mono);
   --background-image-home-img: url('/images/home-image.jpg');
+  --animate-appear: appear 0.4s ease-out;
+  --animate-slide: slide 0.4s ease-out;
   --color-sidebar-ring: var(--sidebar-ring);
   --color-sidebar-border: var(--sidebar-border);
   --color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
